@@ -16,7 +16,6 @@ Cleanup
 - check version earlier during unmarshalling, otherwise who knows what
 data you're unmarshalling.
 - static funcs don't need prefix rule
-- metric name index instead of list
 
 Audit
 - code review to reduce memory footprint
